--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-.center {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-    height: auto;
-    border: 10px solid rgba(34, 64, 135, 0.7);
-    margin: 4px;
-    }
+:root {
+    --clr-dark: #2C2C2C;
+    --clr-light: #F7374F;
+    --clr-slate: #5225468d;
+    --clr-primary: #88304E;
+    --clr-link: #7638b0;
+}
+
+
 .title {
     align-self: center;
     display: flex;
@@ -15,32 +15,66 @@
     font-size: 30px;
     justify-content: center;
     width: 50%;
+    min-width: 400px;
     height: 300px;
-    border: 10px solid rgba(82, 96, 187, 0.7);
+    border: 10px solid var(--clr-light);
     padding: auto;
+    border-radius: 10px;
 }
+.post{
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    min-width: 400px;
+    border: solid var(--clr-primary);
+    border-radius: 10px;
+    margin: 4px;
+
+}
+.header{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    font-size: 25px;
+    text-shadow: #88304E;
+    border: 6px solid var(--clr-primary);
+}
+.text {
+    display: flex;
+    text-align: left;
+    width: 50%;
+    min-width: 400px;
+    height: auto;
+    border: 6px solid var(--clr-primary);
+    word-wrap: break-word;
+    white-space: normal;
+    }
 .image {
     display: flex;
     width: 50%;
+    min-width: 400px;
     height: auto;
-    border: 10px solid rgba(82, 96, 187, 0.7);
+    border: 6px solid var(--clr-primary);
 }
+
 .centerall {
     display: grid;
     place-items: center;
     height: auto;
-    border: 4px solid rgba(18, 150, 18, 0.258);
-    margin: 4px;
+    border: 4px solid var(--clr-slate);
 }
+
 .secret {
     align-self:normal;
     display: flex;
     font-size: 10px;
 }
+
 * {
-background-color: rgb(41, 52, 70);
-color: rgb(202, 204, 193)
+background-color: var(--clr-dark);
+color: #caccc1
 }
+
 .button {
     align-self: center;
     margin: 4px;
