--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
     display: grid;
     align-items: center;
     justify-content: center;
+    width: 70%;
     min-width: var(--int-width);
     border: solid var(--clr-primary);
     border-radius: 10px;
