--- a/style.css
+++ b/style.css
@@ -6,7 +6,17 @@
     --clr-link: #7638b0;
     --int-width: 350; 
 }
+body {
+background: hsla(0, 33%, 2%, 1);
 
+background: linear-gradient(0deg, hsla(0, 33%, 2%, 1) 0%, hsla(0, 46%, 18%, 1) 50%, hsla(0, 33%, 2%, 1) 100%);
+
+background: -moz-linear-gradient(0deg, hsla(0, 33%, 2%, 1) 0%, hsla(0, 46%, 18%, 1) 50%, hsla(0, 33%, 2%, 1) 100%);
+
+background: -webkit-linear-gradient(0deg, hsla(0, 33%, 2%, 1) 0%, hsla(0, 46%, 18%, 1) 50%, hsla(0, 33%, 2%, 1) 100%);
+
+filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#080404", endColorstr="#431919", GradientType=1 );
+}
 
 .title {
     align-self: center;
@@ -28,9 +38,11 @@
     justify-content: center;
     border: solid var(--clr-primary);
     border-radius: 10px;
+    min-width: 400px;
     margin: 4px;
 
 }
+
 .header{
     display: flex;
     text-align: center;
@@ -60,7 +72,7 @@
     display: grid;
     place-items: center;
     height: auto;
-    border: 4px solid var(--clr-slate);
+    /*border: 4px solid var(--clr-slate);*/
 }
 
 .secret {
@@ -70,7 +82,7 @@
 }
 
 * {
-background-color: var(--clr-dark);
+/*background-color: var(--clr-dark);*/
 color: #caccc1
 }
 
